<resources>
    <string name="app_name">Foodex</string>
    <string name="title_activity_main">Main</string>
    <string name="profile">Profile</string>
    <string name="shopping_list">Shopping List</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="pantry">Pantry</string>
    <string name="api_key">52ac424c734740888509aff070a355ad</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="log_out">LogOut</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="equipment">Equipment</string>
    <string name="find_your_recipes_quickly">Find your recipes quickly!</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="add_to_your_favorites">Add to your favorites</string>
    <string name="item">Item</string>
    <string name="your_pantry">Your Pantry</string>
    <string name="get_recipes">Get Recipes</string>
    <string name="menu">Menu</string>
    <string-array name="tags">
        <item>main course</item>
        <item>side dish</item>
        <item>dessert</item>
        <item>appetizer</item>
        <item>salad</item>
        <item>bread</item>
        <item>breakfast</item>
        <item>soup</item>
        <item>beverage</item>
        <item>sauce</item>
        <item>marinade</item>
        <item>fingerfood</item>
        <item>snack</item>
        <item>drink</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->


</resources>